added search user functionality
- added /results page
- added home page where you can search for the user that you want the top tracks for

--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,6 @@
 }
 
 .button-gradiant {
-    background: linear-gradient(90deg, #000000 -100%, #551992 100%);
+    background: linear-gradient(90deg, #8348bd, #551992);
 }
-
 
