--- a/public/styles.css
+++ b/public/styles.css
@@ -1,8 +1,12 @@
 .profile {
-    background: linear-gradient(90deg, #000000 -3.03%, #551992 100%);
+    background: linear-gradient(90deg, #000000 -5%, #ffb7c5 150%);
 }
 
 .button-gradiant {
-    background: linear-gradient(90deg, #8348bd, #551992);
+    box-shadow: 0 0 5px #fff, 0 0 5px #fff;
 }
 
+.button-gradiant:hover {
+    background: #dddddd;
+    color: black;
+}
